--- a/src/sass/interface.scss
+++ b/src/sass/interface.scss
@@ -208,7 +208,7 @@ $opacity: 0.1s;
   left: 0;
   top: 0;
   height: 100%;
-  width: 100%;
+  width: 100vw;
   z-index: 11 !important;
   position: fixed;
   background-color: var(--popupbg);
